@@ -1,10 +1,5 @@
 # /etc/conf.d/rc: Global config file for the Gentoo RC System
 
-# This is the number of tty's used in most of the rc-scripts (like
-# consolefont, numlock, etc ...)
-
-RC_TTY_NUMBER=11
-
 # Set to "yes" if you want the rc system to try and start services
 # in parallel for a slight speed improvement. NOTE: When enabled
 # init script output is buffered and displayed in one go when finished.
@@ -17,9 +12,20 @@ RC_PARALLEL_STARTUP="no"
 
 RC_INTERACTIVE="yes"
 
+# RC_VERBOSE will make init scripts more verbose and adds
+# "Service FOO starting/started/stopping/stopped" messages around each
+# init script.
+
+RC_VERBOSE="no"
+
+# RC_QUIET on the other hand will make init scripts quiet and produce no
+# output.
+
+RC_QUIET="no"
+
 # Do we allow services to be hotplugged? If not, set to RC_HOTPLUG="no"
-# NOTE: This does not affect anything hotplug/udev related, just the
-# starting/stopping of the init.d service triggered by hotplug.
+# NOTE: This does not affect anything hotplug/udev/devd related, just the
+# starting/stopping of the init.d service triggered by it.
 
 RC_HOTPLUG="yes"
 
@@ -57,6 +63,33 @@ RC_PLUG_SERVICES=""
 
 RC_NET_STRICT_CHECKING="no"
 
+# RC_USE_CONFIG_PROFILE allows you to have different /etc/conf.d files 
+# based on your runlevel - if a conf.d file for your profile does not exist
+# then we try and use the default one.
+# To enable runlevel selection at boot, append "softlevel=foobar" to your
+# kernel line to change to the foobar runlevel.  Here we would search for
+# /etc/conf.d/<service>.foobar config files before trying to use the default
+# /etc/conf.d/<service>.
+
+RC_USE_CONFIG_PROFILE="yes"
+
+# RC_FORCE_AUTO tries its best to prevent user interaction during the boot and 
+# shutdown process.  For example, fsck will automatically be run or volumes 
+# remounted to create proper directory trees.  This feature can be dangerous 
+# and is meant ONLY for headless machines where getting a physical console 
+# hooked up is a huge pita.
+
+RC_FORCE_AUTO="no"
+
+
+##############################################################################
+# LINUX SPECIFIC OPTIONS
+
+# This is the number of tty's used in most of the rc-scripts (like
+# consolefont, numlock, etc ...)
+
+RC_TTY_NUMBER=11
+
 # RC_DOWN_INTERFACE allows you to specify if RC will bring the interface
 # compeletly down when it stops. The default is yes, but there are some
 # instances where you may not want this to happen such as using Wake On LAN.
@@ -73,17 +106,6 @@ RC_DOWN_HARDDISK="yes"
 # stopped in reverse order.
 
 RC_VOLUME_ORDER="raid evms lvm dm"
-
-# RC_VERBOSE will make init scripts more verbose and adds
-# "Service FOO starting/started/stopping/stopped" messages around each
-# init script.
-
-RC_VERBOSE="no"
-
-# RC_QUIET on the other hand will make init scripts quiet and produce no
-# output.
-
-RC_QUIET="no"
 
 # RC_BOOTLOG will generate a log of the boot messages shown on the console.  
 # Useful for headless machines or debugging.  You need to emerge the 
@@ -103,28 +125,6 @@ RC_BOOTCHART="no"
 
 RC_USE_FSTAB="no"
 
-# RC_USE_CONFIG_PROFILE allows you to have different /etc/conf.d files 
-# based on your runlevel - if a conf.d file for your profile does not exist
-# then we try and use the default one.
-# To enable runlevel selection at boot, append "softlevel=foobar" to your
-# kernel line to change to the foobar runlevel.  Here we would search for
-# /etc/conf.d/<service>.foobar config files before trying to use the default
-# /etc/conf.d/<service>.
-# Note that it is only active if 'softlevel' was specified via the kernel line,
-# and it is intended to use for different grub/lilo entries to specify config
-# changes for say laptops between home and work, where you would have setup
-# 'work' and 'home' runlevels, with /etc/conf.d/*.<runlevel> as needed.
-
-RC_USE_CONFIG_PROFILE="yes"
-
-# RC_FORCE_AUTO tries its best to prevent user interaction during the boot and 
-# shutdown process.  For example, fsck will automatically be run or volumes 
-# remounted to create proper directory trees.  This feature can be dangerous 
-# and is meant ONLY for headless machines where getting a physical console 
-# hooked up is a huge pita.
-
-RC_FORCE_AUTO="no"
-
 # Use this variable to control the /dev management behavior.
 #  auto   - let the scripts figure out what's best at boot
 #  devfs  - use devfs (requires sys-fs/devfsd)
@@ -140,60 +140,11 @@ RC_DEVICES="auto"
 
 RC_DEVICE_TARBALL="no"
 
-# RC_SWAP_ERASE controls erasing of swap partitions at shutdown.
-# Useful for all those paranoid peeps to nuke their memory.
-
-RC_SWAP_ERASE="no"
-
 # RC_DMESG_LEVEL sets the level at which logging of messages is done to the
 # console.  See dmesg(8) for more info.
 
 RC_DMESG_LOGLEVEL="1"
 
-
-
-
-
-#
-# Controlling start-stop-daemon behavior
-
-# Set to "yes" if start-stop-daemon should always retry killing the
-# service with sig KILL if it fails the first time.
-
-RC_RETRY_KILL="yes"
-
-
-# Set the amount of seconds start-stop-daemon should wait between
-# retries.
-
-RC_RETRY_TIMEOUT=1
-
-
-# Set the amount of times start-stop-daemon should try to kill
-# a service before giving up.
-
-RC_RETRY_COUNT=5
-
-
-# Set to "yes" if start-stop-daemon should fail if the service
-# is marked as started, but not actually running on stop.
-
-RC_FAIL_ON_ZOMBIE="no"
-
-
-# Set to "yes" if start-stop-daemon should attempt to kill
-# any children left in the system.
-# Be careful with this as it really does what it was on the tin.
-# fex, if you're in an ssh process and you restart a service on which ssh
-# depends then your terminal will be killed also.
-
-RC_KILL_CHILDREN="no"
-
-
-# Set the amount of seconds start-stop-daemon waits after starting
-# the daemon to check it is still running. If it's not then we
-# try and stop any children if possible.
-RC_WAIT_ON_START="0.1"
 
 
 ##############################################################################
