@@ -6,36 +6,27 @@ depend() {
 	use hostname
 	need localmount
 	before logger
-	after clock
+	after clock sysctl
 }
 
 start() {
-#	[[ ${BOOT} != "yes" ]] && return 0
+	[[ ${BOOT} != "yes" ]] && return 0
 
-	#
-	# Put a nologin file in /etc to prevent people from logging in before
-	# system startup is complete.
-	#
-	if [[ ${DELAYLOGIN} == "yes" ]] ; then
-		echo $"System bootup in progress - please wait" > /etc/nologin
-		cp /etc/nologin /etc/nologin.boot &> /dev/null
-	fi
-
-	if [[ -e /etc/sysctl.conf ]] ; then
-		local retval=0
-		ebegin $"Configuring kernel parameters"
-		if [[ $(uname) == "Linux" ]] ; then
-			sysctl -q -p /etc/sysctl.conf
-			retval=$?
-		else
-			grep -v '^[[:space:]]*#' /etc/sysctl.conf \
-			| while read var comments ; do
-				[[ -n ${var} ]] \
-					&& sysctl "${var}" >/dev/null \
-					|| retval=1
-			done
+	if [[ $(uname) == "Linux" ]] ; then
+		# Put a nologin file in /etc to prevent people from logging
+		# in before system startup is complete.
+		if [[ ${DELAYLOGIN} == "yes" ]] ; then
+			echo $"System bootup in progress - please wait" \
+				> /etc/nologin
+			cp /etc/nologin /etc/nologin.boot &> /dev/null
 		fi
-		eend ${retval}
+
+		# BSD has it's own sysctl init script
+		if [[ -e /etc/sysctl.conf ]] ; then
+			ebegin $"Configuring kernel parameters"
+			sysctl -q -p /etc/sysctl.conf
+			eend $?
+		fi
 	fi
 
 	if [[ -z ${CDBOOT} ]] && ! touch -c /var/run 2> /dev/null ; then
@@ -43,11 +34,13 @@ start() {
 		return 0
 	fi
 
-	# Setup login records
-	> /var/run/utmp
-	touch /var/log/wtmp
-	chgrp utmp /var/run/utmp /var/log/wtmp
-	chmod 0664 /var/run/utmp /var/log/wtmp
+	if [[ $(uname) == "Linux" ]] ; then
+		# Setup login records
+		> /var/run/utmp
+		touch /var/log/wtmp
+		chgrp utmp /var/run/utmp /var/log/wtmp
+		chmod 0664 /var/run/utmp /var/log/wtmp
+	fi
 
 	if [[ -x /sbin/env-update.sh ]] ; then
 		ebegin $"Updating environment"
@@ -68,15 +61,19 @@ start() {
 		#
 		find /var/lock -type f -print0 | xargs -0 rm -f --
 		#
-		# Clean up /var/run and create /var/run/utmp so that we can login.
+		# Clean up /var/run and create /var/run/utmp so we can login.
 		#
 		for x in $(find /var/run/ ! -type d ! -name utmp ! -name innd.pid ! -name random-seed); do
 			# Do not remove pidfiles of already running daemons
 			if [[ ${x} == *".pid" ]] ; then
-				[[ $(<"${x}") != $(pidof $(basename "${x}" .pid))* ]] \
+				[[ $(<"${x}") != \
+				$(pidof $(basename "${x}" .pid))* ]] \
+					&& continue
+				[[ $(<"${x}") != \
+				$(pidof $(basename "${x%%-*}" .pid))* ]] \
 					&& continue
 			fi
-			[[ ! -f ${x} && ! -L ${x} ]] && continue
+			[[ ! -f ${x} ]] && continue
 			rm -f "${x}"
 		done
 	fi
